2005-04-23  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath:

	2005-04-19  Andrew John Hughes  <gnu_andrew@member.fsf.org>

        * java/net/URL.java:
        (toURI()): Implemented.

2005-04-23  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath:

	2005-04-18  Sven de Marothy  <sven@physto.se>

        * java/io/InputStreamReader.java:
        (read): Fix several bugs leading to incorrect length being returned.

2005-04-23  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath:

	2005-04-18  Sven de Marothy  <sven@physto.se>

        * java/nio/ByteBufferImpl.java:
        (putChar): Inlined for speed.
        (put, get): Bulk methods can use arraycopy.
        * java/nio/CharBufferImpl.java:
        (put, get): Bulk methods can use arraycopy.

2005-04-23  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath:

	2005-04-18  Roman Kennke  <roman@kennke.org>

        * javax/swing/tree/DefaultTreeSelectionModel.java:
        Added API documentation all over the class.

2005-04-23  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath:

	2005-04-18  Sven de Marothy  <sven@physto.se>

        * include/Makefile.am,
        * native/jni/java-nio/Makefile.am: Added new files.
        * gnu/java/nio/charset/iconv/IconvCharset.java,
        * gnu/java/nio/charset/iconv/IconvDecoder.java,
        * gnu/java/nio/charset/iconv/IconvEncoder.java,
        * gnu/java/nio/charset/iconv/IconvMetaData.java,
        * gnu/java/nio/charset/iconv/IconvProvider.java,
        * native/jni/java-nio/gnu_java_nio_charset_iconv_IconvDecoder.c,
        * native/jni/java-nio/gnu_java_nio_charset_iconv_IconvEncoder.c,
        * include/gnu_java_nio_charset_iconv_IconvDecoder.h,
        * include/gnu_java_nio_charset_iconv_IconvEncoder.h,
        New files.

2005-04-22  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath:

	2005-04-18  Roman Kennke  <roman@kennke.org>
