@@ -2,6 +2,17 @@
 
 	Resynced with GNU Classpath:
 
+	2005-04-19  Roman Kennke  <roman@kennke.org>
+
+        * javax/swing/plaf/basic/BasicOptionPaneUI.java
+        (createMessageArea): The JPanel that holds the message area
+        doesn't need to override getPreferredSize. This prevents some
+        message components from rendering nicely.
+
+2005-04-23  Dalibor Topic  <robilad@kaffe.org>
+
+	Resynced with GNU Classpath:
+
 	2005-04-19  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
         * java/net/URL.java:
